test: Ajustar testes dos controllers e criar novos testes para as services